--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
-click==7.1.1
-Flask==1.1.2
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-Werkzeug==1.0.1
+blinker==1.8.2
+click==8.1.7
+flask==3.0.3
+flask-mail==0.10.0
+importlib-metadata==8.2.0
+itsdangerous==2.2.0
+jinja2==3.1.4
+MarkupSafe==2.1.5
+werkzeug==3.0.3
+zipp==3.19.2
